Add new feature to authenticate with X-API-Key and other bugs fixes
