# docs/swagger.yaml
@@ -93,6 +93,8 @@ definitions:
         items:
           type: integer
         type: array
+      api_key:
+        type: string
       cell_phone:
         type: string
       cep:
@@ -135,6 +137,17 @@ definitions:
     - name
     - status
     - type
+    type: object
+  github_com_jeancarlosdanese_go-base-api_internal_domain_models.TenantRedis:
+    properties:
+      cpfcnpj:
+        type: string
+      email:
+        type: string
+      id:
+        type: string
+      name:
+        type: string
     type: object
   github_com_jeancarlosdanese_go-base-api_internal_domain_models.User:
     properties:
@@ -199,8 +212,31 @@ info:
     url: github.com/jeancarlosdanese/go-base-api/blob/main/LICENSE
   termsOfService: github.com/jeancarlosdanese/go-base-api/blob/main/LICENSE
   title: Swagger Go Base API
-  version: 0.0.4
+  version: 0.0.5
 paths:
+  /api/v1/auth-apikey/tenant-by-apikey:
+    get:
+      consumes:
+      - application/json
+      description: Busca Tenant por X-API-Key
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Tenant
+          schema:
+            $ref: '#/definitions/github_com_jeancarlosdanese_go-base-api_internal_domain_models.TenantRedis'
+        "400":
+          description: Invalid X-API-Key format
+          schema:
+            $ref: '#/definitions/github_com_jeancarlosdanese_go-base-api_internal_domain_models.HTTPError'
+        "404":
+          description: Tenant not found
+          schema:
+            $ref: '#/definitions/github_com_jeancarlosdanese_go-base-api_internal_domain_models.HTTPError'
+      summary: Busca Tenant por X-API-Key
+      tags:
+      - auth-apikey
   /api/v1/auth/login:
     post:
       consumes:
